data/rules.v4
# Generated by iptables-save 
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

#ACCEPT any related or established connections
-I INPUT 1 -m state --state RELATED,ESTABLISHED -j ACCEPT
-I OUTPUT 1 -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow all traffic on the loopback interface
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Allow outbound DHCP request
-A OUTPUT -p udp --dport 67:68 --sport 67:68 -j ACCEPT

# Allow inbound SSH
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW -j ACCEPT

# Outbound DNS lookups
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT

# Outbound elastic fleet connection
-A OUTPUT -p tcp -m tcp --dport 8220 -j ACCEPT

# inbound mysql connection
-A INPUT -p tcp -m tcp --dport 3306 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 33060 -m state --state NEW -j ACCEPT

# Outbound PING requests
-A OUTPUT -p icmp -j ACCEPT

# Inbound PING requests
-A INPUT -p icmp -j ACCEPT

# Outbound Network Time Protocol (NTP) requests
-A OUTPUT -p udp --dport 123 --sport 123 -j ACCEPT

# Outbound HTTP
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT


COMMIT
